# TextToMP3Speech

./: .dockerignore  .replit  RAILWAY.md  app.py  forms.py  google_auth.py  gunicorn.conf.py  main.py  models.py  neon-texttomp3-20260506.dump  nixpacks.toml  pyproject.toml  railway-before-texttomp3-20260506.dump  railway-trolley-before-texttomp3-20260506.dump  replit.md  replit.nix  routes.py  test_async_openai_tts.py  test_openai.py  test_openai_tts.py  test_timezone.py  timezone_utils.py  tts_converter.py  utils.py
attached_assets/: Pasted-2025-04-07-18-54-34-75-b329389a-User-INFO-routes-Fetching-progress-for-conversion-with-UUID-182b8e0-1744077307767.txt  Pasted-2025-04-07-19-06-43-18-505d8719-User-INFO-routes-Fetching-progress-for-conversion-with-UUID-8d456e1-1744078344979.txt  Pasted-Alright-you-re-definitely-stuck-in-limbo-right-after-chunking-and-individual-TTS-calls-The-conver-1744077297275.txt  Pasted-Based-on-a-review-of-tts-converter-py-I-have-identified_1767313325272.txt  Pasted-Here-are-the-critical-changes-you-should-make-to-ensure-the-application-works-reliably-especially-fo-1742787669301.txt  Pasted-Thanks-for-sharing-the-code-The-logic-is-very-comprehensive-but-I-now-have-enough-context-to-ident-1744075404252.txt  Pasted-Yes-we-can-absolutely-make-the-download-start-automatic_1767324295498.txt
static/css/: styles.css
static/js/: progress.js
templates/: 404.html  500.html  base.html  conversions.html  convert.html  dashboard.html  index.html  login.html  register.html
