[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "openai>=1.68.2",
    "psycopg2-binary>=2.9.10",
    "flask-wtf>=1.2.2",
    "sqlalchemy>=2.0.39",
    "pydub>=0.25.1",
    "werkzeug>=3.1.3",
    "wtforms>=3.2.1",
    "aiohttp>=3.13.3",
    "oauthlib>=3.2.2",
    "requests>=2.32.4",
    "pytz>=2025.1",
    "h11>=0.16.0",
    "urllib3>=2.6.3",
]
